--- a/upgrade/files/7.1.6-7.2.0/conclusion.html
+++ b/upgrade/files/7.1.6-7.2.0/conclusion.html
@@ -1,12 +1,34 @@
 <b>IMPORTANT!!!</b><br />
 Automatic part of upgade is completed. Please do the following to complete upgrade process: <br />
 <ul>    
-    <li>    
-        Remove the following lines from <b>inc/header.inc.php</b> file:
+    <li>
+        Remove the following two blocks of code from <b>inc/header.inc.php</b> file:
+
         <pre style="border:1px solid #060; color:#060; overflow:scroll;">
 $site['ver']               = '7.1';
-$site['build']             = '6'; 
-        </pre>
+$site['build']             = '6';</pre>
+        <pre style="border:1px solid #060; color:#060; overflow:scroll;">
+$video_ext                 = 'avi';
+$MOGRIFY                   = "/path/to/mogrify";
+$CONVERT                   = "/path/to/convert";
+$COMPOSITE                 = "/path/to/composite";</pre>
+
+        Change the following line from:
+
+        <pre style="border:1px solid #060; color:#060; overflow:scroll;">
+require_once(BX_DIRECTORY_PATH_INC . "security.inc.php");</pre>
+
+        to:
+
+        <pre style="border:1px solid #060; color:#060; overflow:scroll;">
+require_once(BX_DIRECTORY_PATH_INC . "version.inc.php");</pre>
+
     </li>
+    <li>Clean <b>/cache/</b>, <b>/cache_public/</b> and <b>/tmp/</b> folders via FTP or SSH, leave only .htaccess file there if one exists</li>
+    <li>Recompile system language file from Admin Panel -&gt; Settings -&gt; Languages Settings -&gt; Languages</li>
+    <li>Clean <b>/cache/</b> folder again</li>
+	<li>Recompile Forum language file from Admin Panel -&gt; Modules -&gt; Forum -&gt; Manage Forum</li>
+    <li><a href="files/7.1.6-7.2.0/update_handlers.php" target="_blank">Click here to update Wall module handlers and Shoutbox objects</a></li>
+    <li><a href="files/7.1.6-7.2.0/photos_resize.php" target="_blank">Click here to resize images from Photos module to the new dimentions</a></li>
     <li>Remove <b>/upgrade/</b> directory</li>
 </ul>
