--- a/upgrade/files/7.3.5-7.4.0/conclusion.html
+++ b/upgrade/files/7.3.5-7.4.0/conclusion.html
@@ -15,7 +15,7 @@ $site['emailError']        = true;
 <pre>
 $db['persistent']          = true;
 </pre>
-            after <b>$db['persistent']...</b> line.
+            after <b>$db['db']...</b> line.
             </li>
             <li> Add
 <pre>
